can add and view peeps

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 Welcome to Chitter
 
-<form action = "/" method = "get">
+<form action = "/" method = "post">
   <input type = 'text' name = 'message'/>
   <input type = "submit" value = "Peep"/>
 </form>
